# Defender-Graph-MCP-Server

./: .gitignore  GITHUB.md  INSTALL.md  README.md  SKILLS.md  pyproject.toml
Defender Graph Security MCP Server/: INSTALL.md  README.md  SKILLS.md  package.json
Defender Graph Security MCP Server/scripts/: smoke.js
Defender Graph Security MCP Server/src/: index.js
scripts/: smoke.js
src/: index.js
src/defender_graph_mcp/: __init__.py  server.py  smoke.py
